Fixing filtertable alignment

--- a/styles.css
+++ b/styles.css
@@ -34,8 +34,7 @@ footer {
 .dropbtn:hover, .dropbtn:focus {
   background-color: #3e8e41;
 }
-/
-* The container <div> - needed to position the dropdown content */
+/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
@@ -117,7 +116,7 @@ footer {
   white-space:nowrap;
 }
 
-.elemTable td:not(:first-child), td:not(:last-child){
+.elemTable td:not(:first-child), .elemTable td:not(:last-child){
   width: 5%;
   overflow: hidden;  
 }
@@ -137,7 +136,7 @@ footer {
   overflow: hidden;  	
   white-space:nowrap;
 }
-.uniqueTable td:not(:first-child), td:not(:last-child){
+.uniqueTable td:not(:first-child), .uniqueTable td:not(:last-child){
   width: 5%;
   overflow: hidden;  
   white-space:nowrap;  
@@ -186,8 +185,7 @@ footer {
   white-space:nowrap;
 }
 
-.statusTable td:not(:first-child), td:not(:last-child){
-  width: 5%;
+.statusTable td:not(:first-child), .statusTable td:not(:last-child){
   overflow: hidden;  
 }
 
@@ -201,6 +199,14 @@ footer {
   width: 70%;
 }
 
+
+.filterTable {
+  width:550px;
+}
+
+.filterTable td {
+  width:120px;
+}
 
 
 /* Change color of dropdown links on hover */
